istio/gateway/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  namespace: learn-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          imagePullPolicy: Always
          image: parvinshi/httpserver:v3
          ports:
            - containerPort: 80
