istio/gateway/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-svc
  namespace: learn-istio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpserver
